--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js --open --env.mock",
+    "start": "node scripts/start.js --open",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
