--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.1.2",
+    "antd": "4.18.7",
     "axios": "^1.2.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
