--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.3.3",
     "antd": "4.18.7",
     "axios": "^1.2.2",
@@ -34,6 +34,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gridmanager": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
